--- a/index.html
+++ b/index.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Pedro Britto</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Pedro Britto | Desenvolvedor Web</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:300,400,800" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,800" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700|Pacifico|Satisfy" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:300,800" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   </head>
   <body>
 
 <div class="wrapper">
-  <!-- <img class="my-photo" src="img/profile.jpg" alt="Retrato de Pedro Britto"> -->
+  <!-- Main Header -->
   <header class="main-header">
     <h1 class="heading">Pedro Britto</h1>
     <div class="subheading">
-      Web Developer Front End
-      <br>
+      Desenvolvedor Web Front End
+    </div>
+    <div class="social-links">
       <a href="mailto:pedroivobritto@gmail.com">
+        <i class="fa fa-envelope-o" aria-hidden="true"></i>
         pedroivobritto@gmail.com
       </a>
-      <div class="social-links">
-        <a href="https://github.com/pedrobritto">
-          <i class="fa fa-github-alt" aria-hidden="true"></i>
-          GitHub
-        </a>
-      </div>
+      <a href="https://github.com/pedrobritto">
+        <i class="fa fa-github-alt" aria-hidden="true"></i>
+        GitHub
+      </a>
+      <a href="http://codepen.io/pedrobritto/pens/public/">
+        <i class="fa fa-codepen" aria-hidden="true"></i>
+        CodePen
+      </a>
     </div>
 
   </header>
@@ -36,9 +38,13 @@
   <section class="resume-section">
     <h2 class="heading">Sobre mim</h2>
     <p>
-      Sou um aprendiz de desenvolvimento web com foco em front end, atualmente estudando online na HarvardX, Treehouse e Udemy.
-
+      Olá!
     </p>
+
+    <p>
+      Sou um aprendiz de desenvolvimento web com foco em front end, atualmente estudando online na HarvardX, Treehouse e Udemy.
+    </p>
+
     <p>
       Adquiri interesse pela área e um pouco de experiência quando precisei desenvolver parte de uma loja virtual, trabalhando principalmente com CSS, WooCommerce e Nginx.
     </p>
@@ -212,7 +218,6 @@
       </ul>
     </div>
 
-
   </section>
 
   <!-- Education -->
@@ -220,48 +225,60 @@
     <h2 class="heading">Educação</h2>
     <ul class="education-list">
       <li class="item">
-        <div class="name">
-          <a href="https://www.edx.org/course/introduction-computer-science-harvardx-cs50x">
-            CS50x
-          </a>
-          • HarvardX
+        <div class="summary">
+          <h3 class="course">
+            <a href="https://www.edx.org/course/introduction-computer-science-harvardx-cs50x">
+              CS50x
+            </a>
+          </h3>
+          <div class="institution">HarvardX</div>
+          <div class="date">2016 &ndash; Presente</div>
         </div>
-        <div class="date">2016 &ndash; Presente</div>
         <p class="description">
           Curso de introdução à ciência da computação da Harvard University. Assuntos como abstrações, algorítmos, estruturas de dados, engenharia de software e desenvolvimento web são abordados.
         </p>
       </li>
+
       <li class="item">
-        <div class="name">
-          <a href="https://teamtreehouse.com/tracks/front-end-web-development">
-            Front End Web Development
-          </a>
-          • Treehouse
+        <div class="summary">
+          <h3 class="course">
+            <a href="https://teamtreehouse.com/tracks/front-end-web-development">
+              Front End Web Development
+            </a>
+          </h3>
+          <div class="institution">Treehouse</div>
+          <div class="date">2016 &ndash; Presente</div>
         </div>
-        <div class="date">2016 &ndash; Presente</div>
         <p class="description">
-          Estudos sobre sobre desenvolvimento web de nível básico e intermediário, incluindo HTML5, CSS3, JavaScript, PHP5 e WordPress.
+          Estudos sobre sobre desenvolvimento web de nível básico e intermediário, incluindo HTML5, CSS3, JavaScript, PHP e WordPress.
         </p>
       </li>
+
       <li class="item">
-        <div class="name">
-          <a href="https://www.udemy.com/the-web-developer-bootcamp/">
-            The Webdeveloper Bootcamp
-          </a>
-          • Udemy
+        <div class="summary">
+          <h3 class="course">
+            <a href="https://www.udemy.com/the-web-developer-bootcamp/">
+              The Webdeveloper Bootcamp
+            </a>
+          </h3>
+          <div class="institution">Udemy</div>
+          <div class="date">2016 &ndash; Presente</div>
         </div>
-        <div class="date">2016 &ndash; Presente</div>
         <p class="description">
           Similar ao curso da Treehouse com a adição de Node.js, Express, NoSQL e autenticação.
         </p>
       </li>
+
       <li class="item">
-        <div class="name">
-          <a href="http://www.opa.pro.br/curso/design-grafico/">
-            Design Gráfico
-          </a>
-          •  Opa! Escola de Design</div>
-        <div class="date">2011 &ndash; 2011</div>
+        <div class="summary">
+          <h3 class="course">
+            <a href="http://www.opa.pro.br/curso/design-grafico/">
+              Design Gráfico
+            </a>
+          </h3>
+          <div class="institution">Opa! Escola de Design</div>
+          <div class="date">2011 &ndash; 2011</div>
+        </div>
         <p class="description">
           História do design, tipografia, linguagem visual, cores, Photoshop e Illustrator.
         </p>
@@ -271,11 +288,15 @@
 
   <!-- Experience -->
   <section class="resume-section">
-    <h2 class="heading">Experiências</h2>
+    <h2 class="heading">Experiência</h2>
     <div class="job-entry">
       <div class="summary">
-        <h3 class="rolename">Desenvolvimento Básico</h3>
-        <div class="companyname">Hammer Gaming &#8226; <span class="period">2015 &ndash; 2016</span></div>
+        <h3 class="rolename">Desenvolvimento e Manutenção</h3>
+        <div class="companyname">
+          <a href="http://www.hammergaming.com.br">Hammer Gaming</a>
+        </div>
+
+        <div class="period">2015 &ndash; 2016</div>
       </div>
 
       <ul class="activities">
@@ -293,7 +314,12 @@
 </div>
 
     <footer>
-      <small>Handcrafted with <i class="fa fa-code" aria-hidden="true"></i> and <i class="fa fa-heart" aria-hidden="true"></i></small>
+      <p>
+        Crafted with
+        <i class="fa fa-code" aria-hidden="true"></i>
+        and
+        <i class="fa fa-heart" aria-hidden="true"></i>
+      </p>
     </footer>
 
   </body>
