--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -3,12 +3,6 @@ title: Meu Currículo
 permalink: /cv/
 ---
 
-{% include head.html %}
-
-<div class="wrapper">
-  <!-- Main Header -->
-    {% include header.html %}
-
   <!-- About me -->
   <section class="resume-section">
     <h2 class="heading">Sobre mim</h2>
@@ -50,6 +44,10 @@ permalink: /cv/
           <span class="score lvl-2"></span>
         </li>
         <li class="item">
+          <span class="skill">Otimização de desempenho</span>
+          <span class="score lvl-2"></span>
+        </li>
+        <li class="item">
           <span class="skill">JavaScript</span>
           <span class="score lvl-1"></span>
         </li>
@@ -64,10 +62,6 @@ permalink: /cv/
         <li class="item">
           <span class="skill">Layout Responsivo</span>
           <span class="score lvl-1"></span>
-        </li>
-        <li class="item">
-          <span class="skill">Otimização de sites</span>
-          <span class="score lvl-2"></span>
         </li>
       </ul>
     </div>
@@ -96,12 +90,12 @@ permalink: /cv/
       </blockquote> -->
       <ul class="list">
         <li class="item">
-          <span class="skill">WordPress</span>
-          <span class="score lvl-1"></span>
-        </li>
-        <li class="item">
           <span class="skill">WooCommerce</span>
           <span class="score lvl-2"></span>
+        </li>
+        <li class="item">
+          <span class="skill">WordPress</span>
+          <span class="score lvl-1"></span>
         </li>
       </ul>
     </div>
@@ -109,6 +103,14 @@ permalink: /cv/
     <div class="skill-list">
       <h3 class="heading">Design</h3>
       <ul class="list">
+        <li class="item">
+          <span class="skill">Photoshop</span>
+          <span class="score lvl-2"></span>
+        </li>
+        <li class="item">
+          <span class="skill">Illustrator</span>
+          <span class="score lvl-2"></span>
+        </li>
         <li class="item">
           <span class="skill">Design Gráfico</span>
           <span class="score lvl-1"></span>
@@ -124,14 +126,6 @@ permalink: /cv/
         <li class="item">
           <span class="skill">Gimp </span>
           <span class="score lvl-1"></span>
-        </li>
-        <li class="item">
-          <span class="skill">Photoshop</span>
-          <span class="score lvl-2"></span>
-        </li>
-        <li class="item">
-          <span class="skill">Illustrator</span>
-          <span class="score lvl-2"></span>
         </li>
       </ul>
     </div>
@@ -280,30 +274,3 @@ permalink: /cv/
     </div>
 
   </section>
-</div>
-
-<<<<<<< HEAD:src/_pages/cv.html
-{% include footer.html %}
-=======
-    <footer>
-      <p>
-        Crafted with
-        <i class="fa fa-code" aria-hidden="true"></i>
-        and
-        <i class="fa fa-heart" aria-hidden="true"></i>
-      </p>
-    </footer>
-    
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-51253396-4', 'auto');
-      ga('send', 'pageview');
-    </script>
-
-  </body>
-</html>
->>>>>>> master:index.html
