fixes jekyll front matter for meta description

--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -1,6 +1,8 @@
 ---
-title: Meu Currículo
 permalink: /cv/
+
+title: Meu Currículo
+description: Um resumo do que eu consigo fazer com um pouco de código.
 ---
 
   <!-- About me -->
