--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -3,278 +3,246 @@ permalink: /cv/
 
 title: Meu Currículo
 description: Um resumo do que eu consigo fazer com um pouco de código.
+
+about_me: >
+  <p>
+    Olá!
+  </p>
+  <p>
+    Sou um aprendiz de desenvolvimento web com foco em front end, atualmente estudando online na HarvardX, Treehouse e Udemy.
+  </p>
+  <p>
+    Adquiri interesse pela área e um pouco de experiência quando precisei desenvolver parte de uma loja virtual, trabalhando principalmente com CSS, WooCommerce e Nginx.
+  </p>
+  <p>
+    Sou muito curioso e gosto bastante de criar e aprender.
+  </p>
+
+skills:
+  - name: Front End
+    quote: >
+      Meu conhecimento é básico, mas consigo me virar com HTML5 e CSS3. Sou fissurado em otimização de desempenho no front end (otimização de imagens, fontes, assets, etc). Ainda engatinhando em Javascript e jQuery.
+    items:
+      - name: HTML5
+        skill_level: 2
+      - name: CSS3
+        skill_level: 2
+      - name: JavaScript
+        skill_level: 1
+      - name: jQuery
+        skill_level: 1
+      - name: Otimização de Desempenho
+        skill_level: 2
+      - name: Layout Responsivo
+        skill_level: 2
+
+
+  - name: Back End
+    quote: >
+      Consigo criar e configurar pequenos servidores web a partir de uma VPS Linux e NGINX. Sei fazer otimização básica de performance.
+    items:
+      - name: PHP
+        skill_level: 1
+      - name: NGINX
+        skill_level: 1
+
+
+  - name: Ferramentas de Desenvolvimento
+    quote: >
+
+    items:
+      - name: Atom
+        skill_level: 2
+      - name: Jekyll
+        skill_level: 2
+      - name: Gulp
+        skill_level: 1
+      - name: Sass/SCSS
+        skill_level: 1
+      - name: Git
+        skill_level: 1
+
+
+  - name: CMS
+    quote: >
+      Tenho conhecimentos básicos em desenvolvimento com Wordpress e conhecimentos intermediários na instalação, uso e manutenção com WooCommerce
+    items:
+      - name: WooCommerce
+        skill_level: 2
+      - name: WordPress
+        skill_level: 1
+
+
+  - name: Design
+    quote: >
+      Sei utilizar algumas ferramentas importantes. Tenho conhecimentos básicos de Design Gráfico e gosto de experimentar com tipografia.
+    items:
+      - name: Photoshop
+        skill_level: 2
+      - name: Illustrator
+        skill_level: 2
+      - name: Gimp
+        skill_level: 1
+      - name: Tipografia
+        skill_level: 2
+      - name: Design Gráfico
+        skill_level: 1
+      - name: UI/UX
+        skill_level: 1
+
+
+  - name: Idiomas
+    quote: >
+      Fluente em Português. Consigo ler e ouvir em inglês sem dificuldade. Iniciando estudos em Alemão.
+    items:
+      - name: Português
+        skill_level: 3
+      - name: Inglês
+        skill_level: 3
+      - name: Alemão
+        skill_level: 1
+
+courses:
+  - name: CS50x
+    url: https://www.edx.org/course/introduction-computer-science-harvardx-cs50x
+    institution: HarvardX
+    from: 2016
+    to: Presente
+    description: >
+      Curso de introdução à ciência da computação da Harvard University. Assuntos como abstrações, algorítmos, estruturas de dados, engenharia de software e desenvolvimento web são abordados.
+
+  - name: Front End Web Development
+    url: https://teamtreehouse.com/tracks/front-end-web-development
+    institution: Treehouse
+    from: 2016
+    to: Presente
+    description: >
+      Estudos sobre sobre desenvolvimento web de nível básico e intermediário, incluindo HTML5, CSS3, JavaScript, PHP e WordPress.
+
+  - name: The Webdeveloper Bootcamp
+    url: https://www.udemy.com/the-web-developer-bootcamp
+    institution: Udemy
+    from: 2016
+    to: Presente
+    description: >
+      Similar ao curso da Treehouse com a adição de Node.js, Express, NoSQL e autenticação.
+
+  - name: Design Gráfico
+    url: http://www.opa.pro.br/curso/design-grafico/
+    institution: Opa! Escola de Design
+    from: 2011
+    to: 2011
+    description: >
+      História do design, tipografia, linguagem visual, cores, Photoshop e Illustrator.
+
+experiences:
+  - role: Desenvolvimento e Manutenção de Site
+    company: Hammer Gaming
+    from: 2015
+    to: 2016
+    activities:
+      - Alterações básicas de tema e templates WooCommerce.
+      - Cadastro de produtos e criação do layout das descrições.
+      - Escolha e edição de todas as imagens utilizadas no site.
+      - Escrita de todos os guias.
+      - Modificação e padronização de estilos CSS.
+      - Configuração e manutenção básica de VPS Ubuntu para rodar e-commerce com Wordpress e WooCommerce.
+      - Otimização de tempo de carregamento e tamanho de requisições.
+
 ---
 
-  <div class="l-container">
-    <!-- About me -->
-    <section class="resume-section">
-      <h2 class="heading">Sobre mim</h2>
-      <p>
-        Olá!
-      </p>
+  <main class="l-main-content">
+    <div class="l-container">
+      <h1>{{ page.title }}</h1>
 
-      <p>
-        Sou um aprendiz de desenvolvimento web com foco em front end, atualmente estudando online na HarvardX, Treehouse e Udemy.
-      </p>
+      <!-- About me -->
+      <section class="resume-section">
+        <h2 class="heading">Sobre mim</h2>
 
-      <p>
-        Adquiri interesse pela área e um pouco de experiência quando precisei desenvolver parte de uma loja virtual, trabalhando principalmente com CSS, WooCommerce e Nginx.
-      </p>
+        {{ page.about_me }}
 
-      <p>
-        Sou muito curioso e gosto bastante de aprender e criar.
-      </p>
+      </section>
 
-    </section>
+      <!-- Skills -->
+      <section class="resume-section">
+        <h2 class="heading">Habilidades</h2>
 
-    <!-- Skills -->
-    <section class="resume-section">
-      <h2 class="heading">Habilidades</h2>
+        {% for skill in page.skills %}
 
-      <div class="skill-list">
-        <h3 class="heading">Front End</h3>
-        <blockquote>
-          Meu conhecimento de Front End é básico. Consigo me virar bem com HTML5 e CSS3. Não estou muito aprofundado em JavaScript.
-        </blockquote>
+          <div class="skill-list">
 
-        <ul class="list">
-          <li class="item">
-            <span class="skill">HTML5</span>
-            <span class="score lvl-2"></span>
-          </li>
-          <li class="item">
-            <span class="skill">CSS3</span>
-            <span class="score lvl-2"></span>
-          </li>
-          <li class="item">
-            <span class="skill">Otimização de desempenho</span>
-            <span class="score lvl-2"></span>
-          </li>
-          <li class="item">
-            <span class="skill">JavaScript</span>
-            <span class="score lvl-1"></span>
-          </li>
-          <li class="item">
-            <span class="skill">RSCSS</span>
-            <span class="score lvl-1"></span>
-          </li>
-          <li class="item">
-            <span class="skill">SMACSS</span>
-            <span class="score lvl-1"></span>
-          </li>
-          <li class="item">
-            <span class="skill">Layout Responsivo</span>
-            <span class="score lvl-1"></span>
-          </li>
-        </ul>
-      </div>
+            <h3 class="heading">{{ skill.name }}</h3>
 
-      <div class="skill-list">
-        <h3 class="heading">Back End</h3>
-        <blockquote>
-          Consigo criar e configurar pequenos servidores web a partir de uma VPS Linux e NGINX.
-        </blockquote>
-        <ul class="list">
-          <li class="item">
-            <span class="skill">PHP</span>
-            <span class="score lvl-1"></span>
-          </li>
-          <li class="item">
-            <span class="skill">NGINX</span>
-            <span class="score lvl-1"></span>
-          </li>
-        </ul>
-      </div>
+            {% if skill.quote %}
+              <blockquote>{{ skill.quote }}</blockquote>
+            {% endif %}
 
-      <div class="skill-list">
-        <h3 class="heading">CMS</h3>
-        <!-- <blockquote>
-          Trabalhei gerenciando todo o conteúdo de uma loja virtual com WooCommerce.
-        </blockquote> -->
-        <ul class="list">
-          <li class="item">
-            <span class="skill">WooCommerce</span>
-            <span class="score lvl-2"></span>
-          </li>
-          <li class="item">
-            <span class="skill">WordPress</span>
-            <span class="score lvl-1"></span>
-          </li>
-        </ul>
-      </div>
+            {% if skill.items %}
+              <ul class="list">
+              {% for item in skill.items %}
+                <li class="item">
+                  <span class="skill">{{ item.name }}</span>
+                  <span class="score lvl-{{ item.skill_level }}"></span>
+                </li>
+              {% endfor %}
+              </ul>
+            {% endif %}
 
-      <div class="skill-list">
-        <h3 class="heading">Design</h3>
-        <ul class="list">
-          <li class="item">
-            <span class="skill">Photoshop</span>
-            <span class="score lvl-2"></span>
-          </li>
-          <li class="item">
-            <span class="skill">Illustrator</span>
-            <span class="score lvl-2"></span>
-          </li>
-          <li class="item">
-            <span class="skill">Design Gráfico</span>
-            <span class="score lvl-1"></span>
-          </li>
-          <li class="item">
-            <span class="skill">UI/UX</span>
-            <span class="score lvl-1"></span>
-          </li>
-          <li class="item">
-            <span class="skill">Tipografia</span>
-            <span class="score lvl-1"></span>
-          </li>
-          <li class="item">
-            <span class="skill">Gimp </span>
-            <span class="score lvl-1"></span>
-          </li>
-        </ul>
-      </div>
-
-      <div class="skill-list">
-        <h3 class="heading">Idiomas</h3>
-        <!-- <blockquote>
-          Tenho contato com inglês desde a infância.
-        </blockquote> -->
-        <ul class="list">
-          <li class="item">
-            <span class="skill">Inglês</span>
-            <span class="score lvl-3"></span>
-          </li>
-          <li class="item">
-            <span class="skill">Alemão</span>
-            <span class="score lvl-1"></span>
-          </li>
-        </ul>
-      </div>
-
-      <div class="skill-list">
-        <h3 class="heading">Ferramentas</h3>
-        <ul class="list">
-          <li class="item">
-            <span class="skill">Windows 10</span>
-            <span class="score lvl-3"></span>
-          </li>
-          <li class="item">
-            <span class="skill">Linux (Ubuntu)</span>
-            <span class="score lvl-2"></span>
-          </li>
-          <li class="item">
-            <span class="skill">Atom</span>
-            <span class="score lvl-2"></span>
-          </li>
-          <li class="item">
-            <span class="skill">Sass</span>
-            <span class="score lvl-1"></span>
-          </li>
-          <li class="item">
-            <span class="skill">Gulp</span>
-            <span class="score lvl-1"></span>
-          </li>
-          <li class="item">
-            <span class="skill">SSH</span>
-            <span class="score lvl-1"></span>
-          </li>
-          <li class="item">
-            <span class="skill">Git</span>
-            <span class="score lvl-1"></span>
-          </li>
-        </ul>
-      </div>
-
-    </section>
-
-    <!-- Education -->
-    <section class="resume-section">
-      <h2 class="heading">Educação</h2>
-      <ul class="education-list">
-        <li class="item">
-          <div class="summary">
-            <h3 class="course">
-              <a href="https://www.edx.org/course/introduction-computer-science-harvardx-cs50x">
-                CS50x
-              </a>
-            </h3>
-            <div class="institution">HarvardX</div>
-            <div class="date">2016 &ndash; Presente</div>
-          </div>
-          <p class="description">
-            Curso de introdução à ciência da computação da Harvard University. Assuntos como abstrações, algorítmos, estruturas de dados, engenharia de software e desenvolvimento web são abordados.
-          </p>
-        </li>
-
-        <li class="item">
-          <div class="summary">
-            <h3 class="course">
-              <a href="https://teamtreehouse.com/tracks/front-end-web-development">
-                Front End Web Development
-              </a>
-            </h3>
-            <div class="institution">Treehouse</div>
-            <div class="date">2016 &ndash; Presente</div>
-          </div>
-          <p class="description">
-            Estudos sobre sobre desenvolvimento web de nível básico e intermediário, incluindo HTML5, CSS3, JavaScript, PHP e WordPress.
-          </p>
-        </li>
-
-        <li class="item">
-          <div class="summary">
-            <h3 class="course">
-              <a href="https://www.udemy.com/the-web-developer-bootcamp/">
-                The Webdeveloper Bootcamp
-              </a>
-            </h3>
-            <div class="institution">Udemy</div>
-            <div class="date">2016 &ndash; Presente</div>
-          </div>
-          <p class="description">
-            Similar ao curso da Treehouse com a adição de Node.js, Express, NoSQL e autenticação.
-          </p>
-        </li>
-
-        <li class="item">
-          <div class="summary">
-            <h3 class="course">
-              <a href="http://www.opa.pro.br/curso/design-grafico/">
-                Design Gráfico
-              </a>
-            </h3>
-            <div class="institution">Opa! Escola de Design</div>
-            <div class="date">2011 &ndash; 2011</div>
-          </div>
-          <p class="description">
-            História do design, tipografia, linguagem visual, cores, Photoshop e Illustrator.
-          </p>
-        </li>
-      </ul>
-    </section>
-
-    <!-- Experience -->
-    <section class="resume-section">
-      <h2 class="heading">Experiência</h2>
-      <div class="job-entry">
-        <div class="summary">
-          <h3 class="rolename">Desenvolvimento e Manutenção</h3>
-          <div class="companyname">
-            <a href="http://www.hammergaming.com.br">Hammer Gaming</a>
           </div>
 
-          <div class="period">2015 &ndash; 2016</div>
-        </div>
+        {% endfor %}
+      </section>
 
-        <ul class="activities">
-          <li class="item">Alterações básicas de tema e templates WooCommerce.</li>
-          <li class="item">Cadastro de produtos e criação do layout das descrições.</li>
-          <li class="item">Escolha e edição de todas as imagens utilizadas no site.</li>
-          <li class="item">Escrita de todos os guias.</li>
-          <li class="item">Modificação e padronização de estilos CSS.</li>
-          <li class="item">Configuração e manutenção básica de VPS Ubuntu para rodar e-commerce com Wordpress e WooCommerce.</li>
-          <li class="item">Otimização de tempo de carregamento e tamanho de requisições.</li>
+      <!-- Education -->
+      <section class="resume-section">
+        <h2 class="heading">Educação</h2>
+        <ul class="education-list">
+
+          {% for course in page.courses %}
+
+          <li class="item">
+            <div class="summary">
+              <h3 class="meta-info__title">
+                <a href="{{ course.url }}">
+                  {{ course.name }}
+                </a>
+              </h3>
+              <div class="meta-info__subtitle">{{ course.institution }}</div>
+              <div class="meta-info__date">{{ course.from }} &ndash; {{ course.to}}</div>
+            </div>
+            <p class="meta-info__description">
+              {{ course.description }}
+            </p>
+          </li>
+
+          {% endfor %}
+
         </ul>
-      </div>
+      </section>
 
-    </section>
-  </div>
+      <!-- Experience -->
+      <section class="resume-section">
+        <h2 class="heading">Experiências</h2>
+
+        {% for experience in page.experiences %}
+
+          <div class="job-entry">
+            <div class="summary">
+              <h3 class="meta-info__title">{{ experience.role }}</h3>
+              <div class="meta-info__subtitle">{{ experience.company }}</div>
+
+              <div class="meta-info__date">{{ experience.from }} &ndash; {{ experience.to}}</div>
+            </div>
+
+            <ul class="activities">
+              {% for activity in experience.activities %}
+                <li class="item">{{ activity }}</li>
+              {% endfor %}
+            </ul>
+          </div>
+
+        {% endfor %}
+
+      </section>
+    </div>
+  </main>
