--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -1,5 +1,5 @@
 ---
-permalink: /cv/
+permalink: /curriculum/
 
 title: Meu Currículo
 description: Um resumo do que eu consigo fazer com um pouco de código.
@@ -9,13 +9,11 @@ about_me: >
     Olá!
   </p>
   <p>
-    Sou um aprendiz de desenvolvimento web com foco em front end, atualmente estudando online na HarvardX, Treehouse e Udemy.
+    Sou um desenvolvedor web front-end iniciante de Fortaleza/CE, atualmente estudando na HarvardX, Treehouse e Udemy e fazendo alguns serviços como desenvolvedor freelancer.
   </p>
+
   <p>
-    Adquiri interesse pela área e um pouco de experiência quando precisei desenvolver parte de uma loja virtual, trabalhando principalmente com CSS, WooCommerce e Nginx.
-  </p>
-  <p>
-    Sou muito curioso e gosto bastante de criar e aprender.
+    Sou curioso e tenho grande prazer em criar coisas úteis e aprender algo novo. Tipografia e otimização de performance me fascinam
   </p>
 
 skills:
@@ -65,7 +63,7 @@ skills:
 
   - name: CMS
     quote: >
-      Tenho conhecimentos básicos em desenvolvimento com Wordpress e conhecimentos intermediários na instalação, uso e manutenção com WooCommerce
+      Tenho conhecimentos básicos em desenvolvimento com Wordpress e no uso e manutenção de WooCommerce.
     items:
       - name: WooCommerce
         skill_level: 2
@@ -75,7 +73,7 @@ skills:
 
   - name: Design
     quote: >
-      Sei utilizar algumas ferramentas importantes. Tenho conhecimentos básicos de Design Gráfico e gosto de experimentar com tipografia.
+      Sei utilizar algumas ferramentas importantes. Tenho conhecimentos básicos de Design Gráfico. Gosto de experimentar com tipografia.
     items:
       - name: Photoshop
         skill_level: 2
@@ -93,14 +91,12 @@ skills:
 
   - name: Idiomas
     quote: >
-      Fluente em Português. Consigo ler e ouvir em inglês sem dificuldade. Iniciando estudos em Alemão.
+      Fluente em Português. Consigo ler e ouvir em inglês sem dificuldades.
     items:
       - name: Português
         skill_level: 3
       - name: Inglês
         skill_level: 3
-      - name: Alemão
-        skill_level: 1
 
 courses:
   - name: CS50x
