Changed/fixed curriculum text

--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -8,12 +8,13 @@ about_me: >
   <p>
     Olá!
   </p>
+
   <p>
-    Sou um desenvolvedor web front-end iniciante de Fortaleza/CE, atualmente estudando na HarvardX, Treehouse e Udemy e fazendo alguns serviços como desenvolvedor freelancer.
+    Sou um desenvolvedor web front-end iniciante de Fortaleza/CE. Atualmente estudo na HarvardX, Treehouse e Udemy e faço alguns serviços como freelancer.
   </p>
 
   <p>
-    Sou curioso e tenho grande prazer em criar coisas úteis e aprender algo novo. Tipografia e otimização de performance me fascinam
+    Sou curioso e tenho grande prazer em criar coisas úteis e aprender algo novo. Tipografia e otimização de performance me fascinam.
   </p>
 
 skills:
