--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -6,104 +6,71 @@ description: Um resumo do que eu consigo fazer com um pouco de código.
 
 about_me: >
   <p>
-    Olá!
+    Depois de perceber que eu provavelmente não iria me tornar um piloto de Formula 1, resolvi procurar por alguma coisa que pudesse me animar um pouco. Tecnologia sempre me fascinou, então era um bom ponto de partida. Depois de experimentar com algumas coisas na área decidi ficar com desenvolvimento front end.
   </p>
 
   <p>
-    Sou um desenvolvedor web front-end iniciante de Fortaleza/CE. Atualmente estudo na HarvardX, Treehouse e Udemy e faço alguns serviços como freelancer.
+    Hoje faço parte da equipe de desenvolvedores front end na Index Digital porque gosto de resolver quebra-cabeças e de criar soluções que ajudam outras pessoas a resolverem seus próprios problemas. E se eu puder contribuir para criar workflows mais rápidos e limpos, eu também ajudo.
   </p>
 
   <p>
-    Sou curioso e tenho grande prazer em criar coisas úteis e aprender algo novo. Tipografia e otimização de performance me fascinam.
+    Me viro bem com HTML5, CSS/Sass, JavaScript, otimização de performance, design responsivo, Git e documentações confusas.
   </p>
+
+  <p>
+    Me interesso bastante por React, criação de APIs (com Node.js em especial), Machine Learning, Sistemas Embarcados e carros de corrida.
+  </p>
+
 
 skills:
-  - name: Front End
+  - name: Desenvolvimento Front End
     quote: >
-      Meu conhecimento é básico, mas consigo me virar com HTML5 e CSS3. Sou fissurado em otimização de desempenho no front end (otimização de imagens, fontes, assets, etc). Ainda engatinhando em Javascript e jQuery.
+      Me viro bem com HTML5, CSS3 e consigo criar algumas funcionalidades com JavaScript. Sou fissurado em otimização dos assets no Front e em manter tudo no lugar, independente do tamanho da tela.
     items:
       - name: HTML5
-        skill_level: 2
-      - name: CSS3
-        skill_level: 2
-      - name: JavaScript
-        skill_level: 1
-      - name: jQuery
-        skill_level: 1
-      - name: Otimização de Desempenho
-        skill_level: 2
-      - name: Layout Responsivo
-        skill_level: 2
+      - name: CSS3/Sass
+      - name: JavaScript (ES6)
+      - name: Criação e teste de layouts responsivos
+      - name: Otimização de assets
+      - name: Noções de acessibilidade
 
 
-  - name: Back End
+  - name: Desenvolvimento em geral
     quote: >
-      Consigo criar e configurar pequenos servidores web a partir de uma VPS Linux e NGINX. Sei fazer otimização básica de performance.
+      Me considero zeloso com o código que escrevo e gosto de criar peças reutilizáveis. Código bem feito precisa funcionar E ser fácil de manter.
     items:
-      - name: PHP
-        skill_level: 1
-      - name: NGINX
-        skill_level: 1
+      - name: Reutilização de código
+      - name: Otimização de workflow
+      - name: Noções de Programação Funcional
 
 
   - name: Ferramentas de Desenvolvimento
-    quote: >
-
     items:
-      - name: Atom
-        skill_level: 2
-      - name: Jekyll
-        skill_level: 2
       - name: Gulp
-        skill_level: 1
-      - name: Sass/SCSS
-        skill_level: 1
+      - name: Webpack
       - name: Git
-        skill_level: 1
+      - name: Terminal UNIX
 
 
-  - name: CMS
-    quote: >
-      Tenho conhecimentos básicos em desenvolvimento com Wordpress e no uso e manutenção de WooCommerce.
+  - name: Interesses
     items:
-      - name: WooCommerce
-        skill_level: 2
-      - name: WordPress
-        skill_level: 1
-
-
-  - name: Design
-    quote: >
-      Sei utilizar algumas ferramentas importantes. Tenho conhecimentos básicos de Design Gráfico. Gosto de experimentar com tipografia.
-    items:
-      - name: Photoshop
-        skill_level: 2
-      - name: Illustrator
-        skill_level: 2
-      - name: Gimp
-        skill_level: 1
-      - name: Tipografia
-        skill_level: 2
-      - name: Design Gráfico
-        skill_level: 1
-      - name: UI/UX
-        skill_level: 1
+      - name: React
+      - name: API
 
 
   - name: Idiomas
     quote: >
-      Fluente em Português. Consigo ler e ouvir em inglês sem dificuldades.
+      Consigo ler e ouvir em inglês sem dificuldades. Preciso melhorar na conversação.
     items:
       - name: Português
-        skill_level: 3
       - name: Inglês
-        skill_level: 3
+
 
 courses:
-  - name: CS50x
-    url: https://www.edx.org/course/introduction-computer-science-harvardx-cs50x
-    institution: HarvardX
-    from: 2016
+  - name: MIT 6.00.1x - Introdução à Ciência da Computação com Python
+    url: https://www.edx.org/course/introduction-computer-science-mitx-6-00-1x-11
+    institution: MIT
+    from: 2017
     to: Presente
     description: >
       Curso de introdução à ciência da computação da Harvard University. Assuntos como abstrações, algorítmos, estruturas de dados, engenharia de software e desenvolvimento web são abordados.
@@ -112,17 +79,17 @@ courses:
     url: https://teamtreehouse.com/tracks/front-end-web-development
     institution: Treehouse
     from: 2016
-    to: Presente
+    to: 2017
     description: >
-      Estudos sobre sobre desenvolvimento web de nível básico e intermediário, incluindo HTML5, CSS3, JavaScript, PHP e WordPress.
+      Estudos sobre sobre desenvolvimento web de nível básico e intermediário, incluindo HTML5, CSS3, JavaScript e o básico de PHP e WordPress.
 
-  - name: The Webdeveloper Bootcamp
+  - name: The Webdeveloper Bootcamp (Seção front end)
     url: https://www.udemy.com/the-web-developer-bootcamp
     institution: Udemy
     from: 2016
-    to: Presente
+    to: 2017
     description: >
-      Similar ao curso da Treehouse com a adição de Node.js, Express, NoSQL e autenticação.
+      Similar ao curso da Treehouse.
 
   - name: Design Gráfico
     url: http://www.opa.pro.br/curso/design-grafico/
@@ -133,18 +100,25 @@ courses:
       História do design, tipografia, linguagem visual, cores, Photoshop e Illustrator.
 
 experiences:
+  - role: Desenvolvedor Front End
+    company: Index Digital
+    from: Junho, 2017
+    to: Presente
+    activities:
+      - Criação de páginas a partir de layouts (como quase todos os front ends);
+      - Criação e manutenção de Pattern Library interna para agilizar o desenvolvimento inicial;
+      - Otimização do fluxo de desenvolvimento para evitar gargalos e duplicação de código;
+      - Refatoração de código para uma manutenção mais rápida e menos penosa.
+
+
   - role: Desenvolvimento e Manutenção de Site
     company: Hammer Gaming
     from: 2015
     to: 2016
     activities:
+      - Otimização de tempo de carregamento e tamanho de assets;
+      - Modificação e padronização de estilos CSS;
       - Alterações básicas de tema e templates WooCommerce.
-      - Cadastro de produtos e criação do layout das descrições.
-      - Escolha e edição de todas as imagens utilizadas no site.
-      - Escrita de todos os guias.
-      - Modificação e padronização de estilos CSS.
-      - Configuração e manutenção básica de VPS Ubuntu para rodar e-commerce com Wordpress e WooCommerce.
-      - Otimização de tempo de carregamento e tamanho de requisições.
 
 ---
 
@@ -155,14 +129,13 @@ experiences:
       <!-- About me -->
       <section class="resume-section">
         <h2 class="heading">Sobre mim</h2>
-
         {{ page.about_me }}
-
       </section>
+
 
       <!-- Skills -->
       <section class="resume-section">
-        <h2 class="heading">Habilidades</h2>
+        <h2 class="heading">O que eu sei fazer</h2>
 
         {% for skill in page.skills %}
 
@@ -189,6 +162,35 @@ experiences:
 
         {% endfor %}
       </section>
+      <!-- resume-section -->
+
+
+      <!-- Experience -->
+      <section class="resume-section">
+        <h2 class="heading">Experiências</h2>
+
+        {% for experience in page.experiences %}
+
+          <div class="job-entry">
+            <div class="summary">
+              <h3 class="meta-info__title">{{ experience.role }}</h3>
+              <div class="meta-info__subtitle">{{ experience.company }}</div>
+
+              <div class="meta-info__date">{{ experience.from }} &ndash; {{ experience.to}}</div>
+            </div>
+
+            <ul class="activities">
+              {% for activity in experience.activities %}
+                <li class="item">{{ activity }}</li>
+              {% endfor %}
+            </ul>
+          </div>
+
+        {% endfor %}
+
+      </section>
+      <!-- resume-section -->
+
 
       <!-- Education -->
       <section class="resume-section">
@@ -216,30 +218,7 @@ experiences:
 
         </ul>
       </section>
+      <!-- resume-section -->
 
-      <!-- Experience -->
-      <section class="resume-section">
-        <h2 class="heading">Experiências</h2>
-
-        {% for experience in page.experiences %}
-
-          <div class="job-entry">
-            <div class="summary">
-              <h3 class="meta-info__title">{{ experience.role }}</h3>
-              <div class="meta-info__subtitle">{{ experience.company }}</div>
-
-              <div class="meta-info__date">{{ experience.from }} &ndash; {{ experience.to}}</div>
-            </div>
-
-            <ul class="activities">
-              {% for activity in experience.activities %}
-                <li class="item">{{ activity }}</li>
-              {% endfor %}
-            </ul>
-          </div>
-
-        {% endfor %}
-
-      </section>
     </div>
   </main>
