Add seção comunicação, edita idiomas

--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -45,25 +45,36 @@ skills:
 
 
   - name: Ferramentas de Desenvolvimento
+    quote: >
+      Normalmente uso ou experimento com isso no dia a dia.
     items:
       - name: Gulp
-      - name: Webpack
       - name: Git
+      - name: Webpack
       - name: Terminal UNIX
 
 
+  - name: Comunicação
+    quote: >
+      Não sou muito eloquente mas sei me comunicar. Procuro entender os requisitos do projeto para evitar retrabalho. Consigo manter a calma em momentos de estresse e resolver problemas com a equipe. Consigo reconhecer meus erros e gosto de saber onde posso melhorar. Sem clichés.
+
+
   - name: Interesses
+    quote: >
+      Penso em fazer isso num futuro próximo.
     items:
       - name: React
       - name: API
+      - name: Projetos Open Source
 
 
   - name: Idiomas
     quote: >
-      Consigo ler e ouvir em inglês sem dificuldades. Preciso melhorar na conversação.
+      Consigo ler e ouvir em inglês sem dificuldades, mas posso melhorar na conversação. Alemão bem básico.
     items:
-      - name: Português
-      - name: Inglês
+      - name: Português - Nativo
+      - name: Inglês - Avançado
+      - name: Alemão - Básico
 
 
 courses:
