--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -78,13 +78,13 @@ skills:
 
 
 courses:
-  - name: MIT 6.00.1x - Introdução à Ciência da Computação com Python
+  - name: MIT 6.00.1x - Introduction to Computer Science and Programming Using Python
     url: https://www.edx.org/course/introduction-computer-science-mitx-6-00-1x-11
     institution: MIT
     from: 2017
     to: Presente
     description: >
-      Curso de introdução à ciência da computação da Harvard University. Assuntos como abstrações, algorítmos, estruturas de dados, engenharia de software e desenvolvimento web são abordados.
+      Curso de introdução à ciência da computação do MIT. Assuntos como abstrações, algorítmos, estruturas de dados e engenharia de software são abordados.
 
   - name: Front End Web Development
     url: https://teamtreehouse.com/tracks/front-end-web-development
