--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -23,6 +23,30 @@ about_me: >
 
 
 skills:
+  - name: Desenvolvimento em geral
+    quote: >
+      Me considero zeloso com o código que escrevo e gosto de criar peças reutilizáveis. Código bem feito precisa funcionar E ser fácil de manter. Sei fazer ou tenho:
+    items:
+      - name: Reutilização de código
+      - name: Automação e otimização de workflow
+      - name: Noções de Orientação à Objetos
+      - name: Noções de Programação Funcional
+
+  - name: Linguagens
+    items:
+      - JavaScript (intermediário)
+      - Python (básico)
+
+  - name: Ferramentas de Desenvolvimento
+    quote: >
+      Normalmente uso ou experimento com isso no dia a dia.
+    items:
+      - name: NPM
+      - name: Gulp
+      - name: Git
+      - name: Webpack
+      - name: Terminal UNIX
+
   - name: Desenvolvimento Front End
     quote: >
       Me viro bem com HTML5, CSS3 e consigo criar algumas funcionalidades com JavaScript. Sou fissurado em otimização dos assets no Front e em manter tudo no lugar, independente do tamanho da tela.
@@ -34,81 +58,37 @@ skills:
       - name: Otimização de assets
       - name: Noções de acessibilidade
 
-
-  - name: Desenvolvimento em geral
-    quote: >
-      Me considero zeloso com o código que escrevo e gosto de criar peças reutilizáveis. Código bem feito precisa funcionar E ser fácil de manter.
-    items:
-      - name: Reutilização de código
-      - name: Otimização de workflow
-      - name: Noções de Programação Funcional
-
-
-  - name: Ferramentas de Desenvolvimento
-    quote: >
-      Normalmente uso ou experimento com isso no dia a dia.
-    items:
-      - name: Gulp
-      - name: Git
-      - name: Webpack
-      - name: Terminal UNIX
-
-
   - name: Comunicação
     quote: >
       Não sou muito eloquente mas sei me comunicar. Procuro entender os requisitos do projeto para evitar retrabalho. Consigo manter a calma em momentos de estresse e resolver problemas com a equipe. Consigo reconhecer meus erros e gosto de saber onde posso melhorar. Sem clichés.
-
 
   - name: Interesses
     quote: >
       Penso em fazer isso num futuro próximo.
     items:
-      - name: React
-      - name: API
-      - name: Projetos Open Source
+      - name: Aprender APIs RESTful
+      - name: Aprender Machine Learning
+      - name: Aprender alemão
+      - name: Participar de Projetos Open Source
 
 
   - name: Idiomas
     quote: >
-      Consigo ler e ouvir em inglês sem dificuldades, mas posso melhorar na conversação. Alemão bem básico.
+      Consigo ler e ouvir em inglês sem dificuldades, mas a conversação pode melhorar.
     items:
       - name: Português - Nativo
       - name: Inglês - Avançado
-      - name: Alemão - Básico
 
 
 courses:
   - name: MIT 6.00.1x - Introduction to Computer Science and Programming Using Python
     url: https://www.edx.org/course/introduction-computer-science-mitx-6-00-1x-11
     institution: MIT
-    from: 2017
+    from: 2018
     to: Presente
     description: >
-      Curso de introdução à ciência da computação do MIT. Assuntos como abstrações, algorítmos, estruturas de dados e engenharia de software são abordados.
+      Curso de introdução à ciência da computação do MIT utilizando Python. Assuntos como abstrações, algorítmos, estruturas de dados e engenharia de software são abordados.
 
-  - name: Front End Web Development
-    url: https://teamtreehouse.com/tracks/front-end-web-development
-    institution: Treehouse
-    from: 2016
-    to: 2017
-    description: >
-      Estudos sobre sobre desenvolvimento web de nível básico e intermediário, incluindo HTML5, CSS3, JavaScript e o básico de PHP e WordPress.
-
-  - name: The Webdeveloper Bootcamp (Seção front end)
-    url: https://www.udemy.com/the-web-developer-bootcamp
-    institution: Udemy
-    from: 2016
-    to: 2017
-    description: >
-      Similar ao curso da Treehouse.
-
-  - name: Design Gráfico
-    url: http://www.opa.pro.br/curso/design-grafico/
-    institution: Opa! Escola de Design
-    from: 2011
-    to: 2011
-    description: >
-      História do design, tipografia, linguagem visual, cores, Photoshop e Illustrator.
 
 experiences:
   - role: Desenvolvedor Front End
@@ -122,7 +102,7 @@ experiences:
       - Refatoração de código para uma manutenção mais rápida e menos penosa.
 
 
-  - role: Desenvolvimento e Manutenção de Site
+  - role: Diretor/Desenvolvedor
     company: Hammer Gaming
     from: 2015
     to: 2016
