Mais atualizações no CV
 - Introdução;
 - Ferramentas de desenvolvimento;
 - Interesses.

--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -6,55 +6,52 @@ description: Um resumo do que eu consigo fazer com um pouco de código.
 
 about_me: >
   <p>
-    Depois de perceber que eu provavelmente não iria me tornar um piloto de Formula 1, resolvi procurar por alguma coisa que pudesse me animar um pouco. Tecnologia sempre me fascinou, então era um bom ponto de partida. Depois de experimentar com algumas coisas na área decidi ficar com desenvolvimento front end.
+    Hoje faço parte da equipe de Desenvolvedores Web na Index Digital. Gosto de resolver quebra-cabeças, entender o funcionamento de sistemas e de contribuir para criar workflows mais rápidos e limpos.
   </p>
 
   <p>
-    Hoje faço parte da equipe de desenvolvedores front end na Index Digital porque gosto de resolver quebra-cabeças e de criar soluções que ajudam outras pessoas a resolverem seus próprios problemas. E se eu puder contribuir para criar workflows mais rápidos e limpos, eu também ajudo.
+    Me viro bem com JavaScript, Otimização de workflow e princípios de código limpo.
   </p>
 
   <p>
-    Me viro bem com HTML5, CSS/Sass, JavaScript, otimização de performance, design responsivo, Git e documentações confusas.
-  </p>
-
-  <p>
-    Me interesso bastante por React, criação de APIs (com Node.js em especial), Machine Learning, Sistemas Embarcados e carros de corrida.
+    Me interesso bastante por criação de APIs (com Node.js em especial), Machine Learning, Sistemas Embarcados e carros de corrida.
   </p>
 
 
 skills:
   - name: Desenvolvimento em geral
     quote: >
-      Me considero zeloso com o código que escrevo e gosto de criar peças reutilizáveis. Código bem feito precisa funcionar E ser fácil de manter. Sei fazer ou tenho:
+      Me considero zeloso com o código que escrevo e gosto de criar partes reutilizáveis. Código bem feito precisa funcionar E ser fácil de manter. Sei fazer/tenho:
     items:
-      - name: Reutilização de código
       - name: Automação e otimização de workflow
       - name: Noções de Orientação à Objetos
       - name: Noções de Programação Funcional
+      - name: Noções de Unit Testing
+      - name: Noções de Clean Code
 
   - name: Linguagens
+    quote: >
     items:
-      - JavaScript (intermediário)
-      - Python (básico)
+      - name: JavaScript (intermediário)
+      - name: Python (básico)
 
   - name: Ferramentas de Desenvolvimento
     quote: >
       Normalmente uso ou experimento com isso no dia a dia.
     items:
-      - name: NPM
-      - name: Gulp
+      - name: Docker
       - name: Git
-      - name: Webpack
+      - name: Gulp
+      - name: NPM
       - name: Terminal UNIX
 
-  - name: Desenvolvimento Front End
+  - name: Desenvolvimento Web
     quote: >
-      Me viro bem com HTML5, CSS3 e consigo criar algumas funcionalidades com JavaScript. Sou fissurado em otimização dos assets no Front e em manter tudo no lugar, independente do tamanho da tela.
+      Me viro bem com HTML5, CSS3 e JavaScript. Sou fissurado em otimização dos assets.
     items:
       - name: HTML5
       - name: CSS3/Sass
       - name: JavaScript (ES6)
-      - name: Criação e teste de layouts responsivos
       - name: Otimização de assets
       - name: Noções de acessibilidade
 
@@ -64,12 +61,13 @@ skills:
 
   - name: Interesses
     quote: >
-      Penso em fazer isso num futuro próximo.
+      Penso em aprender/fazer isso num futuro próximo.
     items:
-      - name: Aprender APIs RESTful
-      - name: Aprender Machine Learning
-      - name: Aprender alemão
-      - name: Participar de Projetos Open Source
+      - name: Alemão
+      - name: APIs RESTful
+      - name: Machine Learning
+      - name: Sistemas Embarcados
+      - name: Projetos Open Source
 
 
   - name: Idiomas
@@ -91,25 +89,26 @@ courses:
 
 
 experiences:
-  - role: Desenvolvedor Front End
+  - role: Desenvolvedor Web
     company: Index Digital
     from: Junho, 2017
     to: Presente
     activities:
-      - Criação de páginas a partir de layouts (como quase todos os front ends);
-      - Criação e manutenção de Pattern Library interna para agilizar o desenvolvimento inicial;
+      - Criação e manutenção de Guia de Estilos interno para consistência de código;
+      - Criação e manutenção de
+      - Criação e manutenção de Pattern Library interna para agilizar prototipação e desenvolvimento;
       - Otimização do fluxo de desenvolvimento para evitar gargalos e duplicação de código;
       - Refatoração de código para uma manutenção mais rápida e menos penosa.
 
 
-  - role: Diretor/Desenvolvedor
+  - role: Diretor/Desenvolvedor Web
     company: Hammer Gaming
     from: 2015
     to: 2016
     activities:
-      - Otimização de tempo de carregamento e tamanho de assets;
-      - Modificação e padronização de estilos CSS;
-      - Alterações básicas de tema e templates WooCommerce.
+      - Planejamento estratégico;
+      - Otimização de performance e tempo de carregamento;
+      - Configuração de servidor web.
 
 ---
 
@@ -210,6 +209,10 @@ experiences:
         </ul>
       </section>
       <!-- resume-section -->
+
+      <section class="resume-section">
+        <small>Última atualização: 06/08/2018</small>
+      </section>
 
     </div>
   </main>
