Ajustes no texto do cv, muda cor para azul

--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -6,11 +6,11 @@ description: Um resumo do que eu consigo fazer com um pouco de código.
 
 about_me: >
   <p>
-    Hoje faço parte da equipe de Desenvolvedores Web na Index Digital. Gosto de resolver quebra-cabeças, entender o funcionamento de sistemas e de contribuir para criar workflows mais rápidos e limpos.
+    Atualmente faço parte da equipe de Desenvolvedores Web na Index Digital. Gosto de resolver quebra-cabeças, entender o funcionamento de sistemas e de contribuir para criar workflows mais rápidos e limpos.
   </p>
 
   <p>
-    Me viro bem com JavaScript, Otimização de workflow e princípios de código limpo.
+    Me viro bem com JavaScript, otimização de workflow e princípios de código limpo.
   </p>
 
   <p>
@@ -31,9 +31,10 @@ skills:
 
   - name: Linguagens
     quote: >
+      Consigo escrever em:
     items:
-      - name: JavaScript (intermediário)
-      - name: Python (básico)
+      - name: JavaScript/ECMAScript 2015 - Intermediário
+      - name: Python - Básico
 
   - name: Ferramentas de Desenvolvimento
     quote: >
@@ -42,7 +43,7 @@ skills:
       - name: Docker
       - name: Git
       - name: Gulp
-      - name: NPM
+      - name: Node.js e NPM
       - name: Terminal UNIX
 
   - name: Desenvolvimento Web
@@ -57,7 +58,11 @@ skills:
 
   - name: Comunicação
     quote: >
-      Não sou muito eloquente mas sei me comunicar. Procuro entender os requisitos do projeto para evitar retrabalho. Consigo manter a calma em momentos de estresse e resolver problemas com a equipe. Consigo reconhecer meus erros e gosto de saber onde posso melhorar. Sem clichés.
+      Não sou muito eloquente mas sei me comunicar.
+    items:
+      - name: Procuro entender os requisitos do projeto para evitar retrabalho e perca de eficiência;
+      - name: Consigo manter a calma em momentos de estresse e resolver problemas com a equipe;
+      - name: Consigo reconhecer meus erros e gosto de saber onde posso melhorar. Sem clichés.
 
   - name: Interesses
     quote: >
@@ -91,14 +96,12 @@ courses:
 experiences:
   - role: Desenvolvedor Web
     company: Index Digital
-    from: Junho, 2017
+    from: Julho, 2017
     to: Presente
     activities:
       - Criação e manutenção de Guia de Estilos interno para consistência de código;
-      - Criação e manutenção de
-      - Criação e manutenção de Pattern Library interna para agilizar prototipação e desenvolvimento;
-      - Otimização do fluxo de desenvolvimento para evitar gargalos e duplicação de código;
-      - Refatoração de código para uma manutenção mais rápida e menos penosa.
+      - Criação e manutenção de Boilerplate e Pattern Library interna para agilizar prototipação e tornar o desenvolvimento mais consistente;
+      - Análise e otimização do fluxo de desenvolvimento.
 
 
   - role: Diretor/Desenvolvedor Web
