Mais ajustes finos no cv

--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -6,7 +6,7 @@ description: Um resumo do que eu consigo fazer com um pouco de código.
 
 about_me: >
   <p>
-    Atualmente faço parte da equipe de Desenvolvedores Web na Index Digital. Gosto de resolver quebra-cabeças, entender o funcionamento de sistemas e de contribuir para criar workflows mais rápidos e limpos.
+    Atualmente faço parte da equipe de Desenvolvedores Web na Index Digital. Gosto de resolver problemas, entender o funcionamento de sistemas e de contribuir para criar workflows mais rápidos e limpos.
   </p>
 
   <p>
@@ -14,14 +14,14 @@ about_me: >
   </p>
 
   <p>
-    Me interesso bastante por criação de APIs (com Node.js em especial), Machine Learning, Sistemas Embarcados e carros de corrida.
+    Tenho interesse por Machine Learning, APIs RESTful (Node.js em especial) e Sistemas Embarcados.
   </p>
 
 
 skills:
   - name: Desenvolvimento em geral
     quote: >
-      Me considero zeloso com o código que escrevo e gosto de criar partes reutilizáveis. Código bem feito precisa funcionar E ser fácil de manter. Sei fazer/tenho:
+      Me considero zeloso com o código que escrevo e gosto de criar partes reutilizáveis. Código bem feito precisa funcionar e ser fácil de manter. Sei fazer/tenho:
     items:
       - name: Automação e otimização de workflow
       - name: Noções de Orientação à Objetos
@@ -38,7 +38,7 @@ skills:
 
   - name: Ferramentas de Desenvolvimento
     quote: >
-      Normalmente uso ou experimento com isso no dia a dia.
+    Normalmente uso ou experimento com essas ferramentas no dia a dia:
     items:
       - name: Docker
       - name: Git
@@ -48,7 +48,7 @@ skills:
 
   - name: Desenvolvimento Web
     quote: >
-      Me viro bem com HTML5, CSS3 e JavaScript. Sou fissurado em otimização dos assets.
+      Me viro bem com HTML5, CSS3 e JavaScript. Sou fissurado em otimização de assets.
     items:
       - name: HTML5
       - name: CSS3/Sass
@@ -57,8 +57,6 @@ skills:
       - name: Noções de acessibilidade
 
   - name: Comunicação
-    quote: >
-      Não sou muito eloquente mas sei me comunicar.
     items:
       - name: Procuro entender os requisitos do projeto para evitar retrabalho e perca de eficiência;
       - name: Consigo manter a calma em momentos de estresse e resolver problemas com a equipe;
@@ -66,7 +64,7 @@ skills:
 
   - name: Interesses
     quote: >
-      Penso em aprender/fazer isso num futuro próximo.
+      Penso em aprender/fazer isso num futuro próximo:
     items:
       - name: Alemão
       - name: APIs RESTful
@@ -77,7 +75,7 @@ skills:
 
   - name: Idiomas
     quote: >
-      Consigo ler e ouvir em inglês sem dificuldades, mas a conversação pode melhorar.
+      Consigo ler e ouvir em inglês sem dificuldades, mas a conversação e escrita podem melhorar.
     items:
       - name: Português - Nativo
       - name: Inglês - Avançado
@@ -90,7 +88,7 @@ courses:
     from: 2018
     to: Presente
     description: >
-      Curso de introdução à ciência da computação do MIT utilizando Python. Assuntos como abstrações, algorítmos, estruturas de dados e engenharia de software são abordados.
+      Curso de introdução à ciência da computação do MIT, utilizando Python. Assuntos como abstrações, algorítmos básicos, estruturas de dados e engenharia de software são abordados.
 
 
 experiences:
